// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoRegressionStack not a function 1`] = `
"Property failed after 1 tests
{ seed: 42, path: "0:0", endOnFailure: true }
Counterexample: [0]
Shrunk 1 time(s)
Got TypeError: v is not a function
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:26:14
    at Property.predicate (packages/fast-check/src/check/property/Property.ts:23:56)
    at Property.predicate [as run] (packages/fast-check/src/check/property/Property.generic.ts:133:27)
    at run (packages/fast-check/src/check/runner/Runner.ts:37:26)
    at runIt (packages/fast-check/src/check/runner/Runner.ts:154:7)
    at Object.check (packages/fast-check/src/check/runner/Runner.ts:206:15)
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:40:7
    at _toThrowErrorMatchingSnapshot (node_modules/jest-snapshot/build/index.js:561:7)
    at Object.toThrowErrorMatchingSnapshot (node_modules/jest-snapshot/build/index.js:461:10)
    at __EXTERNAL_MATCHER_TRAP__ (node_modules/expect/build/index.js:317:30)
    at Object.throwingMatcher [as toThrowErrorMatchingSnapshot] (node_modules/expect/build/index.js:318:15)
    at Object.<anonymous> (packages/fast-check/test/e2e/NoRegressionStack.spec.ts:44:7)
    at Promise.then.completed (node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (node_modules/jest-circus/build/utils.js:226:10)
    at _callCircusTest (node_modules/jest-circus/build/run.js:248:40)
    at _runTest (node_modules/jest-circus/build/run.js:184:3)
    at _runTestsForDescribeBlock (node_modules/jest-circus/build/run.js:86:9)
    at _runTestsForDescribeBlock (node_modules/jest-circus/build/run.js:81:9)
    at run (node_modules/jest-circus/build/run.js:26:3)
    at runAndTransformResultsToJestFormat (node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:120:21)
    at jestAdapter (node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (node_modules/jest-runner/build/runTest.js:444:34)

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run"
`;

exports[`NoRegressionStack throw 1`] = `
"Property failed after 2 tests
{ seed: 42, path: "1:0:1:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0", endOnFailure: true }
Counterexample: [0,1]
Shrunk 32 time(s)
Got error: a must be >= b
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:12:21
    at Property.predicate (packages/fast-check/src/check/property/Property.ts:23:56)
    at Property.predicate [as run] (packages/fast-check/src/check/property/Property.generic.ts:133:27)
    at run (packages/fast-check/src/check/runner/Runner.ts:37:26)
    at runIt (packages/fast-check/src/check/runner/Runner.ts:154:7)
    at Object.check (packages/fast-check/src/check/runner/Runner.ts:206:15)
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:40:7
    at _toThrowErrorMatchingSnapshot (node_modules/jest-snapshot/build/index.js:561:7)
    at Object.toThrowErrorMatchingSnapshot (node_modules/jest-snapshot/build/index.js:461:10)
    at __EXTERNAL_MATCHER_TRAP__ (node_modules/expect/build/index.js:317:30)
    at Object.throwingMatcher [as toThrowErrorMatchingSnapshot] (node_modules/expect/build/index.js:318:15)
    at Object.<anonymous> (packages/fast-check/test/e2e/NoRegressionStack.spec.ts:18:7)
    at Promise.then.completed (node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (node_modules/jest-circus/build/utils.js:226:10)
    at _callCircusTest (node_modules/jest-circus/build/run.js:248:40)
    at _runTest (node_modules/jest-circus/build/run.js:184:3)
    at _runTestsForDescribeBlock (node_modules/jest-circus/build/run.js:86:9)
    at _runTestsForDescribeBlock (node_modules/jest-circus/build/run.js:81:9)
    at run (node_modules/jest-circus/build/run.js:26:3)
    at runAndTransformResultsToJestFormat (node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:120:21)
    at jestAdapter (node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (node_modules/jest-runner/build/runTest.js:444:34)

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run"
`;
